--- a/manifest.json
+++ b/manifest.json
@@ -2,16 +2,11 @@
   "name": "Scroll Companion",  
   "description": "A timer for you",  
   "version": "1.0",  
-  "manifest_version": 2,
+  "manifest_version": 3,
   "background": {    
-    "scripts": ["js/background.js"],    
-    "persistent": true
+    "service_worker": "background.js"    
   },
-  "content_scripts":[{
-    "matches": ["http://*/*"],
-    "run_at": "document_idle",
-    "js": ["js/timer.js"]
-  }],
+  "content_scripts":[],
   "permissions": [
     "storage", 
     "tabs"
@@ -19,17 +14,17 @@
   "action": {    
     "default_popup": "popup.html",
     "default_icon": {      
-      "16": "/images/get_started16.png",
-      "32": "/images/get_started32.png",      
-      "48": "/images/get_started48.png",
-      "128": "/images/get_started128.png"    
+      "16": "/images/pixel_waterfall_16.png",
+      "32": "/images/pixel_waterfall_32.png",      
+      "48": "/images/pixel_waterfall_48.png",
+      "128": "/images/pixel_waterfall_128.png"    
     }
   },
   "icons": {    
-    "16": "/images/get_started16.png",    
-    "32": "/images/get_started32.png",    
-    "48": "/images/get_started48.png",    
-    "128": "/images/get_started128.png"  
+    "16": "/images/pixel_waterfall_16.png",    
+    "32": "/images/pixel_waterfall_32.png",    
+    "48": "/images/pixel_waterfall_48.png",    
+    "128": "/images/pixel_waterfall_128.png"  
   }
 }
 
