--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
   "content_scripts":[
     {
       "matches": ["<all_urls>"],
-      "js": ["js/content.js"]
+      "js": ["js/content.js", "js/jquery3.6.0.slim.js"]
     }
   ],
   "permissions": [
