commit before reverting to V2 manifest to troubleshoot notification bug

--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,8 @@
   "permissions": [
     "storage", 
     "tabs",
-    "alarms"
+    "alarms",
+    "notifications"
     ],
   "action": {    
     "default_popup": "popup.html",
