--- a/manifest.json
+++ b/manifest.json
@@ -4,13 +4,13 @@
   "version": "1.0",  
   "manifest_version": 2,
   "background": {    
-    "scripts": ["background.js"],
+    "scripts": ["jquery.js", "background.js"],
     "persistent": false
   },
   "content_scripts":[
     {
       "matches": ["<all_urls>"],
-      "js": ["js/content.js", "jquery3.6.0.slim.js", "js/popup.js"]
+      "js": ["jquery.js", "js/popup.js"]
     }
   ],
   "permissions": [
